2023-08-09T00:42:48Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5803490391 # 1799
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-09
* notice: last 14d: unq all: 44 76
* notice: prev accum: outdated-unq outdated-all / unq all: 1439 4875 / 1488 4946
* notice: next accum: outdated-unq outdated-all / unq all: 1439 4875 / 1492 4951
* notice: prev exec diff / last date diff / accum: unq all: +4 +5 -0 -0 / +6 +8 -0 -0 / 6 8
* notice: removed / changed dates: [] / [2023-08-08]

2023-08-08T16:09:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5799340012 # 1798
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
* notice: last 14d: unq all: 41 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1439 4875 / 1487 4945
* notice: next accum: outdated-unq outdated-all / unq all: 1439 4875 / 1488 4946
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-08-08]

2023-08-08T08:10:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5794410151 # 1797
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
* notice: last 14d: unq all: 40 70
* notice: prev accum: outdated-unq outdated-all / unq all: 1438 4874 / 1486 4943
* notice: next accum: outdated-unq outdated-all / unq all: 1439 4875 / 1487 4945
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-07-25] / [2023-08-08]

2023-08-08T00:41:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5791356302 # 1796