@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-09T00:42:48Z",
-  "count_outdated" : 4875,
-  "uniques_outdated" : 1439,
-  "count" : 4951,
-  "uniques" : 1492,
+  "timestamp" : "2023-08-09T16:11:31Z",
+  "count_outdated" : 4877,
+  "uniques_outdated" : 1440,
+  "count" : 4952,
+  "uniques" : 1493,
   "clones" : [
-    {
-      "timestamp": "2023-07-26T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-07-27T00:00:00Z",
       "count": 2,
@@ -112,6 +103,15 @@
       "uniques": 6,
       "uniques_minmax": [ 1, 6 ],
       "uniques_decinc": [ 0, 6 ]
+    },
+    {
+      "timestamp": "2023-08-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
