@@ -1,12 +1,7 @@
 {
-  "count": 76,
+  "count": 75,
   "uniques": 44,
   "clones": [
-    {
-      "timestamp": "2023-07-26T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-07-27T00:00:00Z",
       "count": 2,
@@ -61,6 +56,11 @@
       "timestamp": "2023-08-08T00:00:00Z",
       "count": 8,
       "uniques": 6
+    },
+    {
+      "timestamp": "2023-08-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
